--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,22 @@
 allure-pytest==2.13.2
 allure-python-commons==2.13.2
-
-attrs==23.1.0
-blinker==1.6.2
-Brotli==1.0.9
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-ConfigArgParse==1.7
-Faker==21.0.0
-Flask==2.3.3
-Flask-BasicAuth==0.2.0
-Flask-Cors==4.0.0
-gevent==23.9.0.post1
-geventhttpclient==2.0.10
-greenlet==2.0.2
+attrs==23.2.0
+certifi==2023.11.17
+exceptiongroup==1.2.0
 h11==0.14.0
-idna==3.4
+idna==3.6
 iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-locust==2.16.1
-MarkupSafe==2.1.3
-msgpack==1.0.5
-outcome==1.2.0
-packaging==23.1
-pluggy==1.2.0
-psutil==5.9.5
+outcome==1.3.0.post0
+packaging==23.2
+pluggy==1.3.0
 PySocks==1.7.1
-pytest==7.4.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pyzmq==25.1.1
-requests==2.31.0
-roundrobin==0.0.4
-selenium==4.13.0
-six==1.16.0
+pytest==7.3.1
+selenium==4.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
-trio==0.22.2
+tomli==2.0.1
+trio==0.23.2
 trio-websocket==0.11.1
-typing_extensions==4.7.1
-urllib3==2.0.4
-webdriver-manager==4.0.1
-Werkzeug==2.3.7
+urllib3==2.1.0
 wsproto==1.2.0
-zope.event==5.0
-zope.interface==6.0
+pytest-html == 4.1.1
